Cambiando color de fondo

--- a/ganso_negro.html
+++ b/ganso_negro.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Restaurante Black Goose</title>
+    <style>
+        body {
+            background-color: #07c9fa;
+            margin: 0 10%;
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 <body>
  <h1>
