Cambiando estilo de los encabezados

--- a/ganso_negro.html
+++ b/ganso_negro.html
@@ -5,9 +5,18 @@
     <title>Restaurante Black Goose</title>
     <style>
         body {
-            background-color: #07c9fa;
+            background-color: #faf607;
             margin: 0 10%;
             font-family: sans-serif;
+        }
+
+        h1 {
+            text-align: center;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-weight: normal;
+            text-transform: uppercase;
+            border-bottom: 1px solid #fa0808;
+            margin-top: 30px;
         }
     </style>
 </head>
