Estilos finales al sitio

--- a/ganso_negro.html
+++ b/ganso_negro.html
@@ -5,7 +5,7 @@
     <title>Restaurante Black Goose</title>
     <style>
         body {
-            background-color: #faf607;
+            background-color: #1707fa;
             margin: 0 10%;
             font-family: sans-serif;
         }
@@ -17,6 +17,21 @@
             text-transform: uppercase;
             border-bottom: 1px solid #fa0808;
             margin-top: 30px;
+        }
+
+        h2 {
+            color: aqua;
+            font-size: 1em;
+        }
+
+        h3 {
+            color: #fa0808;
+        }
+
+        h4 {
+            color: brown;
+            text-align: center;
+            text-transform: uppercase;
         }
     </style>
 </head>
@@ -32,9 +47,10 @@
 <h2>Ubicacion y Horario</h2>
 <p>Guadalajara, Jalisco; <br>Lunes a Jueves 11am a 9pm; <br>Viernes y sábado, de 11 a 24 h</p>
 
-¿Cuál es tu opinión?
+<h3>¿Cuál es tu opinión?</h3>
 
-Mi opinión es...
+
+<h4>Mi opinión es...</h4>
 
 </body>  
 </html>
